--- a/big-event/pom.xml
+++ b/big-event/pom.xml
@@ -42,6 +42,14 @@
       <groupId>com.mysql</groupId>
       <artifactId>mysql-connector-j</artifactId>
     </dependency>
+
+    <!-- lombok 依赖 -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.30</version>
+    </dependency>
+
   </dependencies>
 
   <build>
