--- a/big-event/pom.xml
+++ b/big-event/pom.xml
@@ -47,7 +47,12 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.30</version>
+    </dependency>
+
+    <!-- Validation 依赖 参数校验 -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
 
   </dependencies>
