--- a/big-event/pom.xml
+++ b/big-event/pom.xml
@@ -117,6 +117,17 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.0</version>
+          <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+            <compilerArgument>-parameters</compilerArgument>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
