--- a/big-event/src/main/resources/application.yml
+++ b/big-event/src/main/resources/application.yml
@@ -4,7 +4,11 @@ spring:
     url: jdbc:mysql://localhost:3306/big_event
     username: root
     password: ginlon
+  data:
+    redis: localhost
+    port: 6379
 
 mybatis:
   configuration:
     map-underscore-to-camel-case: true # 下划线命名和驼峰命名的自动转换
+
